processed/gerrit/txt_full/33174.txt
Change:     33174
Subject:    LU-11383 ofd: keep fake IO quiet
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/33174
Change-Id:  I676a8e01a004810d085b11945807ddd5abaf8879
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Li Xi
Created:    2018-09-17 06:53:02.000000000
Updated:    2018-10-31 02:54:27.000000000
Patch Set:  2
Insertions: +2
Deletions:  -2
Comments:   3 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Andreas Dilger, Wang Shilong

--- Commit Message ---
LU-11383 ofd: keep fake IO quiet

This patch disabbles the console messages caused by fake I/O. Using
fake I/O usually means benchmark. Printing a lot of messages will
cost a lot of CPU resource.

Change-Id: I676a8e01a004810d085b11945807ddd5abaf8879
Signed-off-by: Li Xi <lixi@ddn.com>

--- Review History ---

--- Message (Li Xi, 2018-09-17 06:53:02.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-09-17 06:55:16.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-17 06:57:45.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/smt/git/lustre-release/lustre/ofd/ofd_io.c: In function ‘ofd_commitrw_write’:
 /home/green/smt/git/lustre-release/lustre/ofd/ofd_io.c:1127:2: error: implicit declaration of function ‘OBD_FAIL_CHECK_QUIET’ [-Werror=implicit-function-declaration]
   if (OBD_FAIL_CHECK_QUIET(OBD_FAIL_OST_FAKE_RW)) {
   ^
 /home/green/smt/git/lustre-release/lustre/ofd/ofd_io.c: At top level:
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Wang Shilong, 2018-09-17 07:02:52.000000000) ---
Patch Set 1: Code-Review-1

(1 comment)

--- Message (Jenkins, 2018-09-17 07:13:31.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/675/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58638/ : FAILURE

--- Message (Andreas Dilger, 2018-09-17 07:18:48.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Li Xi, 2018-09-17 11:01:00.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2018-09-17 11:01:13.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-17 11:08:38.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (Jenkins, 2018-09-17 11:24:30.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/679/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/58642/ : SUCCESS

--- Message (Autotest, 2018-09-17 11:25:01.000000000) ---
Patch Set 2:

Trevis Autotest2 started optional review-dne-zfs-part-4 session.

--- Message (Autotest, 2018-09-17 11:25:01.000000000) ---
Patch Set 2:

Trevis Autotest2 started optional review-dne-zfs-part-3 session.

--- Message (Autotest, 2018-09-17 11:25:02.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-part-2 session.

--- Message (Autotest, 2018-09-17 11:25:02.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-zfs-part-1 session.

--- Message (Autotest, 2018-09-17 11:25:02.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-zfs-part-2 session.

--- Message (Autotest, 2018-09-17 11:25:02.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-ldiskfs session.

--- Message (Autotest, 2018-09-17 11:25:02.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-zfs session.

--- Message (Autotest, 2018-09-17 11:25:03.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-part-1 session.

--- Message (Autotest, 2018-09-17 11:25:03.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-part-3 session.

--- Message (Autotest, 2018-09-17 11:25:04.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-part-4 session.

--- Message (Wang Shilong, 2018-09-17 12:15:13.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Maloo, 2018-09-17 13:54:54.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-33vm1 for review-ldiskfs received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/59c016ad-9342-4e77-b289-92539604612a). Ran 4 tests. No failures.

--- Message (Maloo, 2018-09-17 16:57:31.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-47vm6 for review-dne-part-1 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/aa2b801e-1090-4676-be23-336a3219c773). Ran 6 tests. No failures.

--- Message (Maloo, 2018-09-17 17:07:23.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-45vm1 for review-dne-part-2 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/ec7fcee5-0ab5-491d-ac19-609f17260bc2). Ran 10 tests. No failures.

--- Message (Maloo, 2018-09-17 17:09:20.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-47vm1 for review-dne-zfs-part-2 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/a0eabff5-508f-4e33-96c6-95f655efec96). Ran 10 tests. No failures.

--- Message (Maloo, 2018-09-17 17:35:40.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-45vm6 for review-dne-zfs-part-1 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/3ede208d-6a35-42bb-901f-754bff4264fa). Ran 6 tests.  1 tests failed: sanity.

--- Message (Maloo, 2018-09-17 18:05:29.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-44vm1 for review-dne-zfs-part-4 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/ba7d613f-bf43-4b74-b7c3-393c8c10ae0b). Ran 12 tests.  1 tests failed: replay-single.

--- Message (Maloo, 2018-09-17 18:07:28.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-38vm1 for review-dne-zfs-part-3 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/6e610dce-5c92-4f6f-8192-193f4d7ee617). Ran 3 tests. No failures.

--- Message (Maloo, 2018-09-17 18:11:31.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-44vm6 for review-zfs received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/d8749f60-b70e-4f09-877b-b7d4b003b7e9). Ran 8 tests. No failures.

--- Message (Maloo, 2018-09-17 18:33:29.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest2 from trevis-48vm6 for review-dne-part-4 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/6ab33113-05f7-471b-a563-a24e698b128c). Ran 12 tests.  1 tests failed: replay-single.

--- Message (Maloo, 2018-09-17 18:41:31.000000000) ---
Patch Set 2: Verified-1

Tests uploaded by Trevis Autotest2 from trevis-48vm1 for review-dne-part-3 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/33ee6779-2c9b-4428-97c3-7d7a2dfc7151). Ran 3 tests. No failures.

--- Message (Li Xi, 2018-10-31 02:54:27.000000000) ---
Abandoned

Problem fixed by LU-11373
